--- a/src/styles/config/_config.scss
+++ b/src/styles/config/_config.scss
@@ -8,28 +8,28 @@ $color-dark: hsl(260deg 70% 6%);
     'base': (
       'border': hsl(215deg 63% 93%),
       'card-border': hsl(220deg 32% 87%),
-      'primary-lightest': hsl(259deg 53% 94%),
+      'code-tab-background': hsl(222deg 100% 98%),
+      'footer-background': hsl(222deg 100% 98%),
       'primary-dark': hsl(261deg 52% 35%),
       'primary-darkest': hsl(272deg 100% 9%),
-      'footer-background': hsl(222deg 100% 98%),
-      'code-tab-background': hsl(222deg 100% 98%),
+      'primary-lightest': hsl(259deg 53% 94%),
     ),
     'breadcrumb': (
       'arrow': hsl(0deg 0% 0% / 0.1),
     ),
     'btn': (
-      'install-background': hsl(0deg 0% 95%),
-      'install-background-hover': hsl(0deg 0% 90%),
-      'install-foreground': hsl(0deg 0% 10%),
+      'dark-background': $color-dark,
+      'dark-background-hover': hsl(260deg 70% 12%),
+      'dark-foreground': hsl(0deg 0% 100%),
       'decline-background': hsl(207deg 39% 17%),
       'decline-foreground': hsl(0deg 0% 100%),
       'discrete-background': hsla(206deg 40% 17% / 0.1),
       'discrete-background-hover': hsl(262deg 71% 49%),
       'discrete-foreground': hsl(0deg 0% 10%),
       'discrete-foreground-hover': hsl(0deg 0% 100%),
-      'dark-background': $color-dark,
-      'dark-background-hover': hsl(260deg 70% 12%),
-      'dark-foreground': hsl(0deg 0% 100%),
+      'install-background': hsl(0deg 0% 95%),
+      'install-background-hover': hsl(0deg 0% 90%),
+      'install-foreground': hsl(0deg 0% 10%),
     ),
     'cookie': (
       'background': hsl(207deg 95% 8%),
@@ -39,25 +39,25 @@ $color-dark: hsl(260deg 70% 6%);
       'background': $color-dark,
     ),
     'hero': (
-      'note-color': hsl(216deg 50% 44%),
-      'note-background': hsl(210deg 100% 97%),
-      'gradient-start': hsl(210deg 100% 98%),
       'gradient-end': hsl(0deg 0% 100%),
+      'gradient-start': hsl(210deg 100% 98%),
+      'note-background': hsl(210deg 100% 97%),
+      'note-color': hsl(216deg 50% 44%),
     ),
     'ide': (
       'header-background': $color-dark,
     ),
     'prism': (
-      'color': hsl(243deg 14% 29%),
       'background': hsl(0deg 0% 98%),
-      'comment': hsl(225deg 14% 46%),
-      'punctuation': hsl(279deg 50% 53%),
-      'namespace': hsl(173deg 100% 24%),
-      'deleted': hsla(1deg 83% 63% / 0.56),
       'boolean': hsl(0deg 44% 53%),
-      'number': hsl(315deg 90% 35%),
-      'constant': hsl(221deg 57% 52%),
       'class-name': hsl(0deg 0% 7%),
+      'color': hsl(243deg 14% 29%),
+      'comment': hsl(225deg 14% 46%),
+      'constant': hsl(221deg 57% 52%),
+      'deleted': hsla(1deg 83% 63% / 0.56),
+      'namespace': hsl(173deg 100% 24%),
+      'number': hsl(315deg 90% 35%),
+      'punctuation': hsl(279deg 50% 53%),
       'regex': hsl(1deg 66% 47%),
     ),
     'scrollbar': (
@@ -68,9 +68,9 @@ $color-dark: hsl(260deg 70% 6%);
   ),
   $dark-colors: dark.$colors,
   $layout: (
-    'container-width': '94rem',
+    'container-width': 94rem,
   ),
-  // $container-width: 94rem,
-  // $form-control-font-size: 1rem,
-  // $btn-font-size: 1rem
+  $settings: (
+    'html-smooth-scrolling': false,
+  ),
 );
