--- a/src/styles/components/_index.scss
+++ b/src/styles/components/_index.scss
@@ -7,6 +7,7 @@
 @forward 'card';
 @forward 'notification';
 @forward 'preview';
+@forward 'anchor-heading';
 @forward 'sidebar';
 @forward 'skip-link';
 @forward 'table-of-content';
