--- a/src/styles/layouts/_blog.scss
+++ b/src/styles/layouts/_blog.scss
@@ -1,13 +1,13 @@
 @use '~sprucecss/scss/spruce' as *;
 
 .l-blog {
-  padding-block: 0 clamp(spacer(xl), 8vw, 7rem);
+  padding-block: 0 clamp(spacer('xl'), 8vw, 7rem);
 
   &__inner {
     --columns: 1;
 
     display: grid;
-    gap: spacer(l);
+    gap: spacer('l');
     grid-template-columns: repeat(var(--columns), minmax(0, 2fr));
 
     @include breakpoint(sm) { --columns: 2; }
