--- a/src/styles/layouts/_documentation.scss
+++ b/src/styles/layouts/_documentation.scss
@@ -1,20 +1,20 @@
 @use '~sprucecss/scss/spruce' as *;
 
 .l-documentation {
-  padding-block: spacer-clamp(m, l) spacer-clamp(l, xl);
+  padding-block: spacer-clamp('m', 'l') spacer-clamp('l', 'xl');
 
   &__inner {
     display: grid;
-    gap: spacer(xl);
+    gap: spacer('xl');
     grid-template-columns: minmax(0, 1fr);
 
-    @include breakpoint(sm) {
+    @include breakpoint('sm') {
       grid-template-columns: minmax(0, 15rem) minmax(0, 1fr);
     }
   }
 
   &__sidebar {
-    @include breakpoint(sm) {
+    @include breakpoint('sm') {
       max-height: calc(100vh - 4rem);
       position: sticky;
     }
@@ -23,29 +23,31 @@
   &__body-helper {
     order: -1;
 
-    @include breakpoint(sm) {
+    @include breakpoint('sm') {
       order: 2;
     }
   }
 
   &__body {
-    column-gap: spacer(xl);
+    column-gap: spacer('xl');
     display: grid;
     grid-auto-rows: min-content;
     grid-template-columns: minmax(0, 1fr);
-    row-gap: spacer(m);
+    row-gap: spacer('m');
 
-    @include breakpoint(lg) {
+    @include breakpoint('lg') {
       grid-template-columns: minmax(0, 1fr) minmax(0, 15rem);
     }
   }
 
   &__table-of-content {
+    inset-block-start: 2rem;
     margin-inline: auto;
     max-width: 45rem;
+    position: sticky;
 
     &-helper {
-      @include breakpoint(lg) {
+      @include breakpoint('lg') {
         grid-column: 2 / 3;
         order: 2;
       }
@@ -53,7 +55,7 @@
   }
 
   &__content {
-    @include breakpoint(lg) {
+    @include breakpoint('lg') {
       grid-column: 1 / 2;
     }
 
@@ -69,12 +71,12 @@
     margin-inline: auto;
     max-width: 45rem;
 
-    @include breakpoint(lg) {
+    @include breakpoint('lg') {
       grid-column: 1 / 2;
     }
   }
 
   &__code-tab {
-    margin-block-end: spacer-clamp(l, xl);
+    margin-block-end: spacer-clamp('l', 'xl');
   }
 }
