--- a/src/styles/mixins/_sidebar.scss
+++ b/src/styles/mixins/_sidebar.scss
@@ -1,12 +1,12 @@
 @use '~sprucecss/scss/spruce' as *;
 
 @mixin sidebar-active-menu-marker {
-  color: color(heading);
+  color: color('heading');
   font-weight: 700;
   position: relative;
 
   &::before {
-    background-color: color(primary);
+    background-color: color('primary');
     border-radius: 0 config('border-radius-sm', $display) config('border-radius-sm', $display) 0;
     bottom: 0;
     content: '';
@@ -18,7 +18,7 @@
 }
 
 @mixin sidebar-title {
-  color: color(heading);
+  color: color('heading');
   font-size: config('font-size-base', $typography);
   margin-block: 0;
 }
