--- a/src/styles/components/_text-btn.scss
+++ b/src/styles/components/_text-btn.scss
@@ -3,7 +3,7 @@
 .text-btn {
   align-items: center;
   display: inline-flex;
-  gap: spacer(xxs);
+  gap: spacer('xxs');
   line-height: 1;
 
   &__icon {
