--- a/src/styles/config/_dark-colors.scss
+++ b/src/styles/config/_dark-colors.scss
@@ -79,6 +79,12 @@ $colors: (
     gradient-start: hsl(206deg 100% 6%),
     gradient-end: hsl(206deg 100% 7%),
   ),
+  'navigation': (
+    'icon-background': hsl(207deg 23% 26%),
+    'icon-background-hover': hsl(207deg 39% 17%),
+    'icon-foreground': hsl(0deg 0% 100%),
+    'icon-foreground-hover': hsl(0deg 0% 100%),
+  ),
   prism: (
     color: hsl(217 34% 88%),
     background: hsl(207 83% 10%),
