--- a/src/styles/components/_cookie-consent.scss
+++ b/src/styles/components/_cookie-consent.scss
@@ -2,13 +2,13 @@
 
 .cookie-consent {
   align-items: center;
-  background-color: color(background, cookie);
-  color: color(foreground, cookie);
+  background-color: color('background', 'cookie');
+  color: color('foreground', 'cookie');
   display: flex;
   flex-wrap: wrap;
   gap: 1rem;
   justify-content: center;
-  padding: spacer(m);
+  padding: spacer('m');
   z-index: 1;
 
   &__body {
