--- a/src/styles/components/_cta.scss
+++ b/src/styles/components/_cta.scss
@@ -2,19 +2,6 @@
 
 .cta {
   background-image: linear-gradient(
-    45deg,
-    hsl(262deg 71% 49%) 0%,
-    hsl(247deg 71% 55%) 11%,
-    hsl(232deg 75% 55%) 22%,
-    hsl(219deg 86% 48%) 33%,
-    hsl(213deg 100% 45%) 44%,
-    hsl(211deg 100% 45%) 56%,
-    hsl(208deg 100% 45%) 67%,
-    hsl(205deg 100% 44%) 78%,
-    hsl(202deg 100% 43%) 89%,
-    hsl(203deg 71% 49%) 100%
-  );
-  background-image: linear-gradient(
     250deg,
     hsl(345deg 100% 42%) 0%,
     hsl(16deg 65% 53%) 19%,
@@ -35,12 +22,12 @@
     align-items: center;
     display: flex;
     flex-wrap: wrap;
-    gap: spacer(m) spacer(l);
+    gap: spacer('m') spacer('l');
     justify-content: space-between;
   }
 
   &__caption {
-    @include layout-stack(s);
+    @include layout-stack('s');
   }
 
   .heading {
@@ -48,7 +35,7 @@
   }
 
   * {
-    color: #fff !important;
+    color: hsl(0deg 0% 100%);
   }
 
   p {
