--- a/src/styles/components/_getting-started.scss
+++ b/src/styles/components/_getting-started.scss
@@ -4,16 +4,16 @@
   padding-block: 3rem;
 
   &--border-block-end {
-    border-block-end: 1px solid color(border);
+    border-block-end: 1px solid color('border');
   }
 
   &--border-block-start {
-    border-block-start: 1px solid color(border);
+    border-block-start: 1px solid color('border');
   }
 
   &__inner {
     align-items: flex-start;
-    @include layout-grid(l, 20rem);
+    @include layout-grid('l', 20rem);
   }
 }
 
