--- a/src/styles/components/_notification.scss
+++ b/src/styles/components/_notification.scss
@@ -7,7 +7,7 @@
   border-radius: config('border-radius-sm', $display);
   display: flex;
   font-size: 1rem;
-  padding: spacer(s) calc(spacer(s) + 0.5rem);
+  padding: spacer('s') calc(spacer('s') + 0.5rem);
   position: relative;
 
   code,
@@ -17,47 +17,47 @@
   }
 
   &--info {
-    background-color: color.change(color(info, alert, true), $alpha: 0.1);
-    border-block-start: 0.5rem solid color(info, alert);
+    background-color: color.change(color('info', 'alert', true), $alpha: 0.1);
+    border-block-start: 0.5rem solid color('info', 'alert');
 
     #{$this}__icon {
-      color: color(info, alert);
+      color: color('info', 'alert');
     }
 
     code,
     kbd,
     samp {
-      border-color: color.change(color(info, alert, true), $alpha: 0.5);
+      border-color: color.change(color('info', 'alert', true), $alpha: 0.5);
     }
   }
 
   &--correct {
-    background-color: color.change(color(success, alert, true), $alpha: 0.1);
-    border-block-start: 0.5rem solid color(success, alert);
+    background-color: color.change(color('success', 'alert', true), $alpha: 0.1);
+    border-block-start: 0.5rem solid color('success', 'alert');
 
     #{$this}__icon {
-      color: color(success, alert);
+      color: color('success', 'alert');
     }
 
     code,
     kbd,
     samp {
-      border-color: color.change(color(success, alert, true), $alpha: 0.5);
+      border-color: color.change(color('success', 'alert', true), $alpha: 0.5);
     }
   }
 
   &--wrong {
-    background-color: color.change(color(danger, alert, true), $alpha: 0.1);
-    border-block-start: 0.5rem solid color(danger, alert);
+    background-color: color.change(color('danger', 'alert', true), $alpha: 0.1);
+    border-block-start: 0.5rem solid color('danger', 'alert');
 
     #{$this}__icon {
-      color: color(danger, alert);
+      color: color('danger', 'alert');
     }
 
     code,
     kbd,
     samp {
-      border-color: color.change(color(danger, alert, true), $alpha: 0.5);
+      border-color: color.change(color('danger', 'alert', true), $alpha: 0.5);
     }
   }
 
@@ -66,8 +66,8 @@
   }
 
   &__icon {
-    background-color: color(background);
-    border: 4px solid color(background);
+    background-color: color('background');
+    border: 4px solid color('background');
     border-radius: 1rem;
     height: 2rem;
     inset: calc(-1rem - 4px) -1rem auto auto;
