--- a/src/styles/components/_page-heading.scss
+++ b/src/styles/components/_page-heading.scss
@@ -3,24 +3,20 @@
 .page-heading {
   align-items: center;
   display: grid;
-  gap: spacer(s);
+  gap: spacer('s');
   grid-template-columns: minmax(0, 1fr);
   justify-content: center;
-  padding-block: clamp(spacer(xxl), 10vw, 6rem) clamp(spacer(xxl), 10vw, 8rem);
+  padding-block: clamp(spacer('xxl'), 10vw, 6rem) clamp(spacer('xxl'), 10vw, 8rem);
   text-align: center;
 
-  @include breakpoint(md) {
+  @include breakpoint('md') {
     grid-template-columns: minmax(0, 1fr) minmax(0, 1.5fr);
     justify-content: flex-start;
     text-align: start;
   }
 
   &__title {
-    font-size: responsive-font-size(
-      $size: 4rem,
-      $scaler: 40,
-      $optimal-size: '4vw + 1rem'
-    );
+    font-size: responsive-font-size(4rem, 40, '4vw + 1rem');
     letter-spacing: -2px;
     line-height: 1;
     margin-block: 0;
@@ -32,18 +28,14 @@
     display: flex;
     flex-direction: column;
 
-    @include breakpoint(md) {
+    @include breakpoint('md') {
       align-items: flex-start;
     }
   }
 
   &__description {
-    font-size: responsive-font-size(
-      $size: 1.25rem,
-      $scaler: 30,
-      $optimal-size: '1vw + 1rem'
-    );
-    margin: spacer(m) 0 0;
+    font-size: responsive-font-size(1.25rem, 30, '1vw + 1rem');
+    margin: spacer('m') 0 0;
     margin-block: 0;
     max-width: 50ch;
   }
@@ -52,7 +44,7 @@
     align-items: center;
     display: flex;
     flex-wrap: wrap;
-    gap: spacer(s);
-    margin-block-start: spacer(xs);
+    gap: spacer('s');
+    margin-block-start: spacer('xs');
   }
 }
