--- a/src/styles/components/_prism.scss
+++ b/src/styles/components/_prism.scss
@@ -9,7 +9,7 @@
 .prism-code {
   &__language {
     border-radius: 0 0 config('border-radius-sm', $display) config('border-radius-sm', $display);
-    color: color(comment, prism);
+    color: color('comment', 'prism');
     display: inline-block;
     font-family: var(--doc-heading-font-family);
     font-size: 0.6rem;
@@ -24,7 +24,7 @@
 
 code[class*='language-'],
 pre[class*='language-'] {
-  color: color(color, prism);
+  color: color('color', 'prism');
   font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
   hyphens: none;
   line-height: 1.65;
@@ -49,7 +49,7 @@ pre[class*='language-'] {
   display: grid;
   margin-block: 0;
   overflow: auto;
-  padding: spacer(m);
+  padding: spacer('m');
 }
 
 pre[class*='language-'] code {
@@ -59,19 +59,19 @@ pre[class*='language-'] code {
 
 :not(pre) > code[class*='language-'],
 pre[class*='language-'] {
-  background: color(background, prism);
+  background: color('background', 'prism');
   overflow-x: auto;
 }
 
 .token.comment,
 .token.prolog,
 .token.cdata {
-  color: color(comment, prism);
+  color: color('comment', 'prism');
   font-style: italic;
 }
 
 .token.punctuation {
-  color: color(punctuation, prism);
+  color: color('punctuation', 'prism');
 }
 
 .namespace {
