--- a/src/styles/components/_site-footer.scss
+++ b/src/styles/components/_site-footer.scss
@@ -2,16 +2,16 @@
 @use '~sprucecss/scss/spruce' as *;
 
 .site-footer {
-  background-color: color(background, footer);
+  background-color: color('background', 'footer');
   color: hsl(0deg 0% 100% / 85%);
   font-size: 1rem;
 
   a {
-    color: color(link, $only-color: true, $map: dark.$colors);
+    color: color('link', $only-color: true, $map: dark.$colors);
 
     &:hover,
     &:focus {
-      color: color(link-hover, $only-color: true, $map: dark.$colors);
+      color: color('link-hover', $only-color: true, $map: dark.$colors);
     }
   }
 
@@ -28,7 +28,7 @@
   &__top {
     --gtc: minmax(0, 1fr);
     display: grid;
-    gap: spacer(l);
+    gap: spacer('l');
     grid-template-columns: var(--gtc);
     padding-block: get-css-variable(--section-gap);
 
@@ -45,13 +45,13 @@
 
   &__title {
     color: hsl(0 0% 100%);
-    font-size: font-size(h4);
-    margin-block: 0 spacer(m);
+    font-size: font-size('h4');
+    margin-block: 0 spacer('m');
   }
 
   &__navigation {
     @include clear-list;
-    @include layout-stack(spacer(xs));
+    @include layout-stack('xs');
     font-size: 1rem;
 
     a {
@@ -62,7 +62,7 @@
       &:focus,
       &:active,
       &[aria-current='page'] {
-        color: color(link-hover, $only-color: true, $map: dark.$colors);
+        color: color('link-hover', $only-color: true, $map: dark.$colors);
       }
 
       &[aria-current='page'] {
@@ -72,10 +72,10 @@
   }
 
   &__bottom {
-    border-block-start: 1px solid color(border, $only-color: true, $map: dark.$colors);
-    padding-block: spacer(m);
+    border-block-start: 1px solid color('border', $only-color: true, $map: dark.$colors);
+    padding-block: spacer('m');
 
-    @include breakpoint(md) {
+    @include breakpoint('md') {
       align-items: center;
       display: flex;
       justify-content: space-between;
@@ -86,7 +86,7 @@
     align-items: center;
     display: inline-flex;
     height: 0.9rem;
-    margin-inline-end: spacer(xs);
+    margin-inline-end: spacer('xs');
 
     svg {
       height: 100%;
@@ -98,6 +98,6 @@
     align-items: center;
     display: flex;
     flex-wrap: wrap;
-    gap: spacer(s);
+    gap: spacer('s');
   }
 }
