--- a/src/styles/components/_theme-switcher.scss
+++ b/src/styles/components/_theme-switcher.scss
@@ -7,7 +7,7 @@
 
   &__icon {
     align-items: center;
-    color: color(text, $only-color: true, $map: dark.$colors);
+    color: color('text', $only-color: true, $map: dark.$colors);
     display: flex;
     inset: 0 auto 0 0;
     justify-content: center;
@@ -29,17 +29,17 @@
   }
 
   &__select {
-    background-color: color(background, footer);
-    border-color: color(border, $only-color: true, $map: dark.$colors);
-    color: color(text, $only-color: true, $map: dark.$colors);
+    background-color: color('background', 'footer');
+    border-color: color('border', $only-color: true, $map: dark.$colors);
+    color: color('text', $only-color: true, $map: dark.$colors);
     font-size: 0.9375rem;
     padding-inline-start: 2rem;
 
     &:focus {
       @include focus-ring(
         $type: config('focus-ring-type', $form-control),
-        $border-color: color(border-focus, form, true, dark.$colors),
-        $ring-color: color(ring-focus, form, true, dark.$colors),
+        $border-color: color('border-focus', 'form', true, dark.$colors),
+        $ring-color: color('ring-focus', 'form', true, dark.$colors),
         $box-shadow-type: config('focus-ring-box-shadow-type', $form-control),
         $ring-width: config('focus-ring-width', $form-control),
         $ring-offset: config('focus-ring-offset', $form-control),
@@ -50,7 +50,7 @@
   select.form-control:not([multiple]):not([size]) {
     @include field-icon(
       config('select', $form-icon, false),
-      color(select-foreground, form, true, dark.$colors)
+      color('select-foreground', 'form', true, dark.$colors)
     );
   }
 }
