--- a/src/styles/layouts/article/_post-author.scss
+++ b/src/styles/layouts/article/_post-author.scss
@@ -3,7 +3,7 @@
 .post-author {
   align-items: center;
   display: flex;
-  gap: spacer(xs);
+  gap: spacer('xs');
   text-decoration: none;
 
   &__avatar {
@@ -15,6 +15,6 @@
   }
 
   &__name {
-    color: color(text);
+    color: color('text');
   }
 }
