--- a/src/styles/layouts/article/_post-heading.scss
+++ b/src/styles/layouts/article/_post-heading.scss
@@ -1,14 +1,14 @@
 @use '~sprucecss/scss/spruce' as *;
 
 .post-heading {
-  margin-block: clamp(5rem, 10vw + 1rem, 7rem) spacer(xl);
+  margin-block: clamp(5rem, 10vw + 1rem, 7rem) spacer('xl');
   text-align: center;
 
   &__inner {
     align-items: center;
     display: flex;
     flex-direction: column;
-    gap: spacer(s);
+    gap: spacer('s');
     justify-content: center;
   }
 
@@ -19,12 +19,12 @@
 
   &__meta {
     align-items: center;
-    column-gap: spacer(m);
+    column-gap: spacer('m');
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    margin-block-start: spacer(l);
-    row-gap: spacer(xs);
+    margin-block-start: spacer('l');
+    row-gap: spacer('xs');
   }
 }
 
@@ -42,8 +42,8 @@
     margin-block: 0;
 
     + li::before {
-      border-block-end: 2px solid color(arrow, breadcrumb);
-      border-inline-end: 2px solid color(arrow, breadcrumb);
+      border-block-end: 2px solid color('arrow', 'breadcrumb');
+      border-inline-end: 2px solid color('arrow', 'breadcrumb');
       content: '';
       display: inline-flex;
       height: 0.4em;
