--- a/src/styles/components/_ide.scss
+++ b/src/styles/components/_ide.scss
@@ -10,7 +10,7 @@
   background-color: color('background');
   border: 1px solid color('border');
   border-radius: config('border-radius-sm', $display);
-  box-shadow: 0 0 3rem hsl(0 0% 0% / 10%);
+  box-shadow: 0 0 3rem hsl(0deg 0% 0% / 10%);
   font-size: 0.9375rem;
   margin-inline: auto;
 
@@ -18,7 +18,6 @@
     align-items: center;
     background-color: color('header-background', 'ide');
     border-radius: config('border-radius-sm', $display) config('border-radius-sm', $display) 0 0;
-    border-bottom: 1px solid color(border);
     padding: 0.45rem 1.25rem;
     display: flex;
     gap: 1rem;
@@ -39,12 +38,49 @@
 
   &__inner {
     display: grid;
-    grid-template-columns: minmax(0, 15rem) minmax(0, 1fr);
+    grid-template-columns: minmax(0, 1fr);
+    position: relative;
+    overflow: hidden;
+
+    @include breakpoint('md') {
+      grid-template-columns: minmax(0, 15rem) minmax(0, 1fr);
+    }
+  }
+
+  &__toggle {
+    border-start-end-radius: 0 !important;
+    border-end-end-radius: 0 !important;
+    border-end-start-radius: 0 !important;
+    inset: auto 0 0 auto;
+    position: absolute;
+
+    @include breakpoint('md') {
+      display: none;
+      position: relative;
+    }
   }
 
   &__sidebar {
-    @include layout-stack('s');
-    padding: 2rem;
+    background-color: color('background');
+    inset: 0 0 0 auto;
+    position: absolute;
+    z-index: 2;
+
+    @include breakpoint('md') {
+      position: relative;
+    }
+
+    &-helper {
+      @include layout-stack('s');
+      display: none;
+      height: 100%;
+      padding: 2rem;
+      overflow-y: auto;
+
+      @include breakpoint('md') {
+        display: block !important;
+      }
+    }
   }
 
   &__editor,
@@ -95,12 +131,14 @@
   }
 
   button {
-    @include clear-btn;
     align-items: center;
+    background: none;
+    border: 0;
     display: flex;
     font-family: config('font-family-heading', $typography);
     gap: spacer('xs');
     line-height: 1;
+    padding: 0;
 
     &.active {
       font-weight: 500;
