--- a/src/styles/config/_config.scss
+++ b/src/styles/config/_config.scss
@@ -6,16 +6,13 @@ $color-dark: hsl(260deg 70% 6%);
   $color-black: $color-dark,
   $colors: (
     'base': (
-      'border': hsl(215deg 63% 93%),
-      'card-border': hsl(220deg 32% 87%),
       'code-tab-background': hsl(222deg 100% 98%),
-      'footer-background': hsl(222deg 100% 98%),
       'primary-dark': hsl(261deg 52% 35%),
       'primary-darkest': hsl(272deg 100% 9%),
       'primary-lightest': hsl(259deg 53% 94%),
     ),
     'breadcrumb': (
-      'arrow': hsl(0deg 0% 0% / 0.1),
+      'arrow': hsl(0deg 0% 0% / 10%),
     ),
     'btn': (
       'dark-background': $color-dark,
@@ -23,7 +20,7 @@ $color-dark: hsl(260deg 70% 6%);
       'dark-foreground': hsl(0deg 0% 100%),
       'decline-background': hsl(207deg 39% 17%),
       'decline-foreground': hsl(0deg 0% 100%),
-      'discrete-background': hsla(206deg 40% 17% / 0.1),
+      'discrete-background': hsla(206deg 40% 17% / 10%),
       'discrete-background-hover': hsl(262deg 71% 49%),
       'discrete-foreground': hsl(0deg 0% 10%),
       'discrete-foreground-hover': hsl(0deg 0% 100%),
@@ -60,16 +57,11 @@ $color-dark: hsl(260deg 70% 6%);
       'color': hsl(243deg 14% 29%),
       'comment': hsl(225deg 14% 46%),
       'constant': hsl(221deg 57% 52%),
-      'deleted': hsla(1deg 83% 63% / 0.56),
+      'deleted': hsla(1deg 83% 63% / 56%),
       'namespace': hsl(173deg 100% 24%),
       'number': hsl(315deg 90% 35%),
       'punctuation': hsl(279deg 50% 53%),
       'regex': hsl(1deg 66% 47%),
-    ),
-    'scrollbar': (
-      'thumb-background': hsl(0deg 0% 0% / 0.15),
-      'thumb-background-hover':	hsl(0deg 0% 0% / 0.25),
-      'track-background':	hsl(0deg 0% 0% / 0.05),
     ),
   ),
   $dark-colors: dark.$colors,
