--- a/src/styles/layouts/article/_post-content.scss
+++ b/src/styles/layouts/article/_post-content.scss
@@ -57,4 +57,8 @@
   > .gatsby-image-wrapper:first-child + * {
     margin-block-start: spacer('l');
   }
+
+  strong {
+    color: color('heading');
+  }
 }
