Font family fix

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,7 +13,7 @@
 
 body {
   --doc-heading-font-family: 'Sora', sans-serif;
-  --doc-body-font-family: 'Inter', cursive;
+  --doc-body-font-family: 'Inter', sans-serif;
   --doc-border-radius-sm: 0.75rem;
   --doc-border-radius-md: 0.925rem;
   --doc-border-radius-lg: 2rem;
