--- a/src/styles/components/_table-of-content.scss
+++ b/src/styles/components/_table-of-content.scss
@@ -45,14 +45,8 @@
       line-height: config('line-height-md', $typography);
       text-decoration: none;
 
-      &:hover,
-      &.active {
+      &:hover {
         color: color('primary');
-      }
-
-      &.active {
-        @include sidebar-active-menu-marker;
-
       }
     }
   }
