--- a/src/styles/config/_dark-mode.scss
+++ b/src/styles/config/_dark-mode.scss
@@ -8,6 +8,7 @@
 [data-theme-mode='dark'] {
   color-scheme: dark;
 
+  /* stylelint-disable-next-line selector-no-qualifying-type */
   select.form-control:not([multiple]):not([size]) {
     @include field-icon(
       config('select', $form-icon, false),
