Remove tilde from @use examples

--- a/src/styles/components/_preview.scss
+++ b/src/styles/components/_preview.scss
@@ -1,4 +1,4 @@
-@use '~sprucecss/scss/spruce' as *;
+@use 'sprucecss/scss/spruce' as *;
 
 .preview {
   @include layout-stack('m', $important: true);
