--- a/src/styles/layouts/_blog.scss
+++ b/src/styles/layouts/_blog.scss
@@ -1,4 +1,4 @@
-@use '~sprucecss/scss/spruce' as *;
+@use 'sprucecss/scss/spruce' as *;
 
 .l-blog {
   padding-block: 0 clamp(spacer('xl'), 8vw, 7rem);
