--- a/src/styles/layouts/_documentation.scss
+++ b/src/styles/layouts/_documentation.scss
@@ -1,4 +1,4 @@
-@use '~sprucecss/scss/spruce' as *;
+@use 'sprucecss/scss/spruce' as *;
 
 .l-documentation {
   padding-block: spacer-clamp('m', 'l') spacer-clamp('l', 'xl');
