--- a/src/styles/components/_theme-switcher.scss
+++ b/src/styles/components/_theme-switcher.scss
@@ -1,5 +1,5 @@
 @use '../config/dark-colors' as dark;
-@use '~sprucecss/scss/spruce' as *;
+@use 'sprucecss/scss/spruce' as *;
 
 .theme-switcher {
   display: inline-flex;
