--- a/src/styles/layouts/article/_post-heading.scss
+++ b/src/styles/layouts/article/_post-heading.scss
@@ -1,4 +1,4 @@
-@use '~sprucecss/scss/spruce' as *;
+@use 'sprucecss/scss/spruce' as *;
 
 .post-heading {
   margin-block: clamp(5rem, 10vw + 1rem, 7rem) spacer('xl');
