--- a/src/styles/layouts/_index.scss
+++ b/src/styles/layouts/_index.scss
@@ -1,6 +1,7 @@
 @forward 'container';
 @forward 'documentation';
 @forward 'blog';
+@forward 'template';
 @forward 'templates';
 @forward 'page';
 @forward 'article';
